[gd_scene load_steps=5 format=4 uid="uid://c3fm8w718s1og"]

[ext_resource type="PackedScene" uid="uid://g530nppg7t37" path="res://scenes/hex_tile.tscn" id="1_a4mv3"]
[ext_resource type="Script" path="res://main.gd" id="1_bw5lp"]

[sub_resource type="Environment" id="Environment_ltv2t"]
background_mode = 1
background_color = Color(0.428465, 0.728074, 1, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 1

[sub_resource type="ArrayMesh" id="ArrayMesh_50vaf"]
_surfaces = [{
"aabb": AABB(-0.866025, 0, -1, 1.73205, 1e-05, 2),
"format": 34359738369,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 18,
"vertex_data": PackedByteArray("AAAAAAAAAAAAAAAA17NdPwAAAAAAAAC/17NdPwAAAAAAAAA/AAAAAAAAAAAAAAAA17NdPwAAAAAAAAA/MjGNJAAAAAAAAIA/AAAAAAAAAAAAAAAAMjGNJAAAAAAAAIA/17NdvwAAAAAAAAA/AAAAAAAAAAAAAAAA17NdvwAAAAAAAAA/17NdvwAAAAAAAAC/AAAAAAAAAAAAAAAA17NdvwAAAAAAAAC/yslTpQAAAAAAAIC/AAAAAAAAAAAAAAAAyslTpQAAAAAAAIC/17NdPwAAAAAAAAC/")
}]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_bw5lp")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.61115, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 5.24084e-05, 1, 0, -1, 5.24084e-05, 0, 20, 0)
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ltv2t")

[node name="Board" type="Node3D" parent="."]

[node name="HexTile" parent="Board" instance=ExtResource("1_a4mv3")]
mesh = SubResource("ArrayMesh_50vaf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GrassButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Grass"

[node name="SandButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Sand"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = 136.0
grow_vertical = 0

[node name="PointyTopButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Pointy Top"

[node name="FlatTopButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Flat Top"

[connection signal="pressed" from="VBoxContainer/GrassButton" to="." method="_on_grass_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SandButton" to="." method="_on_sand_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/PointyTopButton" to="." method="_on_pointy_top_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/FlatTopButton" to="." method="_on_flat_top_button_pressed"]
